Commit to check

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
-		<link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-		
+ <head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Глейси</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
+ </head>
+ <body>			
+
+	<input type="radio" id="btn-1" name="toggle" checked>
+    <input type="radio" id="btn-2" name="toggle">
+    <input type="radio" id="btn-3" name="toggle">
 		
 			
-			<header class="header-page">
-				<div class="container header-layout">
-					<nav class="main-navigation">
-						<div class="index-logo"><a ><img src="img/Logo.png" width="154" height="64" alt="Logo"></a></div>
-						<ul>
+	<div class="site-wrapper">
+    <div class="content-wrapper">
+			<header class="main-header ">
+				<nav class="main-navigation">
+					<a ><img src="img/Logo.png" width="154" height="64" alt="Logo"></a>
+					<ul>
 						<li><a href="#">Каталог</a>
 							<ul class="sub-menu">
 								<li><a href="#">Новинки</a></li>
@@ -27,58 +33,48 @@
 						<li><a href="#">О Компании</a></li>
 					</ul>
 				</nav>
-				<div class="user-block">
-					<a href="#">Поиск</a>
-					<form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+				<div class="second-block">
+					<div class="user-block">
+						<a href="#" class="users user-search">Поиск</a>
+						<form class="search-form" action="https://echo.htmlacademy.ru" method="post">
 						<input type="search" placeholder="Что ищем?">
-					</form>
-					<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+						</form>
+						<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
 						<input type="email" name="email"  placeholder="электронная почта">
 						<input type="password" name="password" value="" placeholder="ПАРОЛЬ">
 						<input type="submit" name="enter" value="ВОЙТИ">
 						<a href="#">забыли пароль?</a>
 						<a href="#">новая регистрация</a>
-					</form>
-					<a class="login" href="#">Вход</a>
-					<a class="basket" href="#">Корзина</a>
+						</form>
+						<a class="users login" href="#">Вход</a>
+						<a class="users basket" href="#">Пусто</a>
+					</div>
 					<div class="user-info">
-						<p>с 10 до 20, ежедневно</p>
+						<p>C 10 до 20, ежедневно</p>
 						<a href="tel:8812450-25-25">8 812 450-25-25</a>
 					</div>	
 				</div>
-			</div>
 			</header>
 			<main>
-			<div class="container">
-				<section class="slider-bar">
-					<div class="radio-slider">
-						<input type="radio" name="slider-radio" value="both-slider" checked>
-						<input type="radio" name="slider-radio" value="raspberies-slider">
-						<input type="radio" name="slider-radio" value="chocolate-slider">
-					</div>
-					
-					<h3>Слайдер</h3>
-					<div class="wrapper">
-					<div class="sliders slider-item1">
-						<div class="silder-info">
-						<h2>Крем-брюле и пломбир с малиновым джемом</h2>
-						<a href="#">Давайте оба!</a>
-						</div>
-					</div>	
-			<div class="sliders slider-item2">
-						<div class="silder-info">
-						<h2>Крем-брюле!</h2>
-						<a href="#">Заказать!</a>
-						</div>
-				</div>	
-				<div class="sliders slider-item3">
-						<div class="silder-info">
-						<h2>Пломбир с малиновым джемом</h2>
-						<a href="#">Заказать!</a>
-						</div>
-				</div>	
-					</div>
-				</section>
+				<div class="slider">
+          <div class="slide" id="slide1">
+            <div class="slide-title">Крем-брюле и пломбир с малиновым джемом</div>
+            <a class="slide-btn" href="#">Давайте оба!</a>
+          </div>
+          <div class="slide" id="slide2">
+            <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
+            <a class="slide-btn" href="#">Давайте оба!</a>
+          </div>
+          <div class="slide" id="slide3">
+            <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
+            <a class="slide-btn" href="#">Давайте оба!</a>
+          </div>
+					 <div class="slider-controls">
+            <label for="btn-1"></label>
+            <label for="btn-2"></label>
+            <label for="btn-3"></label>
+          </div>
+        </div>
 				<section class="promotional-offers ">	
 					<h2>promotional offers</h2>
 					<div class="promotional-left">
@@ -125,6 +121,7 @@
 				</section>	
 				<section class="our-production" >
 					<h2>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
+					<div class="production-wrapper">
 					<div class="production-item">
 						<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
 						<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p> 
@@ -133,8 +130,9 @@
 						<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
 						<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
 				  </div>
+					</div>
 				</section>
-				<section class="blog clearfix">
+				<section class="blog ">
 					<h3>BLOG</h3>
 					<div class="blog-info">
 						<p>Новое в нашем блоге</p>
@@ -148,10 +146,13 @@
 						</form>
 					</div>
 				</section>
-				<section class="about-us">
-					<h3>about-us</h3>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124054!2d30.320894616195037!3d59.9387968690478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sgr!4v1468565893571" 
-						width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
+		
+		
+	<section class="about-us">
+		<h3>about-us</h3>
+        <img src="img/map.jpg" width="1200" height="430" alt="MAP">
+					<!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124054!2d30.320894616195037!3d59.9387968690478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sgr!4v1468565893571" 
+						width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>-->
 					<div class="our-adress">
 						<p>Адрес главного офиса<br>
 						и офлайн магазина:</p>
@@ -168,19 +169,15 @@
 						<textarea name="suggestions" placeholder="Напишите что нибудь"></textarea>
 						<input type="submit" name="submit" value="Отправить">
 					</form>
-				</section>
-				</section>
-			</div>
-			</main>
-		
+	</section>
+		</main>
 		<footer class="main-footer">
-			<div class="container clearfix">
-				<section class="footer-social">
+			<section class="footer-social">
 					<h3>social</h3>
-					<a class="social-btn social-tw" href="#">Твитер</a>
-					<a class="social-btn social-inst" href="#">Инстаграм</a>
-					<a class="social-btn social-fb" href="#">Фейсбук</a>
-					<a class="social-btn social-vk" href="#">Вконтакте</a>
+					<a class="social social-tw" href="#">Твитер</a>
+					<a class="social social-inst" href="#">Инстаграм</a>
+					<a class="social social-fb" href="#">Фейсбук</a>
+					<a class="social social-vk" href="#">Вконтакте</a>
 				</section>
 				<div class="documentation-unit">
 					<a class="doc-item for-suppliers" href="#">Для поставщиков</a>
@@ -190,9 +187,11 @@
 				</div>
 				<div class="copyright">
 					<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-					<p>Сделано в HTML Academy &#169; 2017</p>
+					<p>Сделано в <a href="https://htmlacademy.ru"> HTML Academy </a>&#169; 2017</p>
 				</div>
-			</div>
 		</footer>
+		</div>
+	</div>
+	
   </body>
 </html>
