--- a/catalog.html
+++ b/catalog.html
@@ -10,9 +10,9 @@
   <body>
 		<div class="catalog-page">
 			<div>
-				<header class="main-header ">
+				<header class="main-header container">
 					<nav class="main-navigation">
-						<a ><img src="img/Logo.png" width="154" height="64" alt="Logo"></a>
+						<a href="index.html" ><img src="img/Logo.png" width="154" height="64" alt="Logo"></a>
 						<ul>
 							<li class="first-menu one-units"><a href="#">Каталог</a>
 								<ul class="sub-menu">
