--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="radio" id="btn-3" name="toggle">			
 	<div class="site-wrapper">
     <div class="content-wrapper">
-			<header class="main-header ">
+			<header class="main-header">
 				<nav class="main-navigation">
 					<a ><img src="img/Logo.png" width="154" height="64" alt="Logo"></a>
 					<ul>
@@ -32,18 +32,25 @@
 				</nav>
 				<div class="second-block">
 					<div class="user-block">
-						<a href="#" class="users user-search">Поиск</a>
-						<form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-						<input type="search" placeholder="Что ищем?">
-						</form>
-						<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-						<input type="email" name="email"  placeholder="электронная почта">
-						<input type="password" name="password" value="" placeholder="ПАРОЛЬ">
-						<input type="submit" name="enter" value="ВОЙТИ">
-						<a href="#">забыли пароль?</a>
-						<a href="#">новая регистрация</a>
-						</form>
-						<a class="users login" href="#">Вход</a>
+						<div class="search-wrapper">
+							<a href="#" class="users user-search">Поиск</a>
+							<form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+								<label for="what-look">Что ищем?</label>
+								<input id="what-look" type="search" >
+							</form>
+						</div>	
+						<div class="login-wrapper">
+							<a class="users login" href="#">Вход</a>
+							<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+								<label for="email">электронная почта</label>
+								<input id="email" type="email" name="email">
+								<label for="password">Пароль</label>
+								<input id="password "type="password" name="password">
+								<input type="submit" name="enter" value="ВОЙТИ">
+								<a href="#">забыли пароль?</a>
+								<a href="#">новая регистрация</a>
+							</form>
+						</div>
 						<a class="users basket" href="#">Пусто</a>
 					</div>
 					<div class="user-info">
@@ -145,9 +152,9 @@
 						</form>
 					</div>
 				</section>
-		<section class="about-us">
-		<h3>about-us</h3>
-        <img src="img/map.jpg" width="1200" height="430" alt="MAP">
+				<section class="about-us">
+					<h3>about-us</h3>
+					<img src="img/map.jpg" width="1200" height="430" alt="MAP">
 					<!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124054!2d30.320894616195037!3d59.9387968690478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sgr!4v1468565893571" 
 						width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>-->
 					<div class="our-adress">
