--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 								</div>
 							</form>
 						</div>
-						<a class="users basket" href="#">Пусто</a>
+						<div class="basket-wrapper">
+							<a class="users basket" href="#">Пусто</a>
+						</div>	
 					</div>
 					<div class="user-info">
 						<p>C 10 до 20, ежедневно</p>
@@ -168,22 +170,9 @@
 						<p>Для заказов по телефону:</p>
 						<p><a href="tel:8812450-25-25"><b>8 812 450-25-25</b></a></p>
 						<p>(с 10 до 20 ежедневно)</p>
-						<p><a href="#" class="feedback-btn">Форма обратной связи</a></p>
+						<p><a href="modal-content.html" class="feedback-btn">Форма обратной связи</a></p>
 					</div>
-					<div class="modal-content">
-						<button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
-						<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
-							<b>Мы обязательно вам ответим!</b>
-							<label for="name">Как вас зовут?</label>
-							<input type="text" id="name" name="name"  placeholder="Как вас зовут?">
-							<label for="email">Ваша почта для ответа?</label>
-							<input type="email" id="email" name="email"  placeholder="Ваша почта для ответа?">
-							<label for="suggestions">Напишите что нибудь</label>
-							<textarea  id="suggestions" name="suggestions" id="suggestions" placeholder="Напишите что нибудь"></textarea>
-							<input type="submit" name="submit" value="Отправить">
-						</form>
-					</div>	
-		</section>
+				</section>
 		</main>
 		<footer class="main-footer">
 			<section class="footer-social">
